--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
 <title>adwain.org</title>
+<style type="text/css">
+html {
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddd;
+  color: rgba(0, 0, 0, 0.7);
+  font-family: monospace;
+}
+</style>
 <h1>Plop!</h1>
