--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
 <title>adwain.org</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style type="text/css">
 html {
   height: 80%;
